Name:                   dhess-ssh-keygen
Version:                1.0.1
Cabal-Version:          >= 1.10
Build-Type:             Simple
Author:                 Drew Hess <src@drewhess.com>
Maintainer:             Drew Hess <src@drewhess.com>
Homepage:               https://github.com/dhess/dhess-ssh-keygen
Bug-Reports:            https://github.com/dhess/dhess-ssh-keygen/issues/
Stability:              experimental
License:                BSD3
License-File:           LICENSE
Copyright:              Copyright (c) 2015, Drew Hess
Tested-With:            GHC == 8.0.2
Synopsis:               Enforce good ssh-keygen hygiene

Extra-Source-Files:     README.md

Executable dhess-ssh-keygen
  Main-Is:             Main.hs
  Other-Modules:       KeyGen
  Other-Extensions:    OverloadedStrings
  Build-Depends:       base >=4.8 && < 4.10
                     , base64-bytestring
                     , bytestring
                     , directory
                     , entropy
                     , optparse-applicative
                     , shelly
                     , system-filepath
                     , text
                     , time
                     , unix
  Hs-Source-Dirs:      src
  Default-Language:    Haskell2010                                

Source-Repository head
  Type:                 git
  Location:             git://github.com/dhess/dhess-ssh-keygen.git
